--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,7 @@ body {
     align-items: center;
     justify-content: space-around;
     margin: auto;
-    height: 320px;
+    height: 380px;
     width: 650px;
     border-radius: 1rem;
 }
@@ -46,9 +46,15 @@ body {
     height:90%;
     margin: 0 auto;
 }
+.image {
+    display: flex;
+    width: 75%;
+    height:70%;
+    margin: 0 auto;
+}
 .card-left img{
-    width: 50%;
-    height: 70%;
+    width:100%;
+    height: 100%;
     border-radius: 100%;
     object-fit: cover;
     margin: 0 auto;
@@ -184,5 +190,12 @@ body {
     .card-right-bottom img:hover{
         width: 33px;
         height: 33px;
+    }
+    .image {
+        display: flex;
+        align-items: center;
+        width: 95%;
+        height:100%;
+        margin: 0 auto;
     }
 }
